# small-streaming-tts

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt
.cursor/plans/: streaming_tts_architecture_e16018a3.plan.md
config/: default.yaml
dataset/: prepare_dataset.py
examples/: demo.py
small_tts/: __init__.py  codec.py  config.py  data.py  depth.py  export.py  layers.py  model.py  train.py  transformer.py
tests/: test_model.py
tools/: eval_dataset_sample.py
